--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -842,15 +842,24 @@
             });
 
             $("#InspectionStage").change(function () {
-                if ($(this).val() == "Final" || $(this).val() == "3rd Party") {
-                    $("#AQLPlan").attr("disabled", false);
-                    $("#AQLProPlan").attr("disabled", false);
+
+                var brandID = '@Model.BrandID';
+                if (brandID == 'ADIDAS') {
+                    if ($(this).val() == "Final" || $(this).val() == "3rd Party") {
+                        $("#AQLPlan").attr("disabled", false);
+                        $("#AQLProPlan").attr("disabled", false);
+                    }
+                    else {
+                        $("#AQLPlan").val("");
+                        $("#AQLPlan").attr("disabled", true);
+                        //$("#AQLProPlan").val("");
+                        $("#AQLProPlan").attr("disabled", true);
+                    }
                 }
                 else {
-                    $("#AQLPlan").val("");
-                    $("#AQLPlan").attr("disabled", true);
-                    //$("#AQLProPlan").val("");
-                    $("#AQLProPlan").attr("disabled", true);
+                    $("#AQLPlan").attr("disabled", false);
+                    $("#AQLProPlan").attr("disabled", false);
+
                 }
             });
 
@@ -949,11 +958,14 @@
                             $('#settingForm > div > div:nth-child(5) > table > tbody > tr:nth-child(n + 3)').remove()
                             $('#settingForm > div > div:nth-child(5) > table > tbody').append(html);
                             $('#AcceptableQualityLevelsProUkey').val($('#ProUkey').val());
-                            
+
                         }
                     })
                 }
             });
+
+
+            $("#InspectionStage").change();
 
             $("#AQLPlan").change();
 
@@ -1329,18 +1341,40 @@
         }
 
         function onInspectionStageChange(value) {
-            //選擇 Final或3rd Party時，會把[AQL Plan]變成可編輯，而[Sample Plan Qty]唯讀
-            if (value == "Final" || value == "3rd Party") {
-                $('#SampleSize').prop('disabled', true);
-                $('#AcceptQty').prop('disabled', true);
-                $('#RejectQty').prop('disabled', true);
-            }
+            var brandID = '@Model.BrandID';
 
-            //選擇Inline或Stagger時，會把[AQL Plan]變成唯讀並將內容變為空白，而[Sample Plan Qty]可編輯"
-            if (value == "Inline" || value == "Stagger") {
-                $('#SampleSize').prop('disabled', false);
-                $('#AcceptQty').prop('disabled', false);
-                $('#RejectQty').prop('disabled', false);
+            if (brandID == 'ADIDAS') {
+                //選擇 Final或3rd Party時，會把[AQL Plan]變成可編輯，而[Sample Plan Qty]唯讀
+                if (value == "Final" || value == "3rd Party") {
+                    $('#SampleSize').prop('disabled', true);
+                    $('#AcceptQty').prop('disabled', true);
+                    $('#RejectQty').prop('disabled', true);
+                }
+
+                //選擇Inline或Stagger時，會把[AQL Plan]變成唯讀並將內容變為空白，而[Sample Plan Qty]可編輯"
+                if (value == "Inline" || value == "Stagger") {
+                    $('#SampleSize').prop('disabled', false);
+                    $('#AcceptQty').prop('disabled', false);
+                    $('#RejectQty').prop('disabled', false);
+                }
+
+            }
+            else {
+
+                //選擇 Final或3rd Party時，會把[AQL Plan]變成可編輯，而[Sample Plan Qty]唯讀
+                if (value == "Final" || value == "3rd Party" || value == "Inline" || value == "Stagger") {
+                    $('#SampleSize').prop('disabled', true);
+                    $('#AcceptQty').prop('disabled', true);
+                    $('#RejectQty').prop('disabled', true);
+                }
+
+                ////選擇Inline或Stagger時，會把[AQL Plan]變成唯讀並將內容變為空白，而[Sample Plan Qty]可編輯"
+                //if (value == "Inline" || value == "Stagger") {
+                //    $('#SampleSize').prop('disabled', false);
+                //    $('#AcceptQty').prop('disabled', false);
+                //    $('#RejectQty').prop('disabled', false);
+                //}
+
             }
 
             currentStage = value;
