ISP20240079 - 修正前端全選箱子問題

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -457,7 +457,7 @@
         //Model.SelectCarton的標籤藏在這邊
         for (int i = 0; i < Model.SelectCarton.Count; i++)
         {
-            @Html.Hidden($"SelectCarton[{i}].Selected", Model.SelectCarton[i].Selected)
+            @Html.Hidden($"SelectCarton[{i}].Selected", Model.SelectCarton[i].Selected,new {@class= "CartonSelect" })
             @Html.Hidden($"SelectCarton[{i}].PackingListID", Model.SelectCarton[i].PackingListID)
             @Html.Hidden($"SelectCarton[{i}].CTNNo", Model.SelectCarton[i].CTNNo)
             @Html.Hidden($"SelectCarton[{i}].OrderID", Model.SelectCarton[i].OrderID)
@@ -735,7 +735,16 @@
                             //Select Carton視窗按下Next
                             var checkedList = [];
                             var totalQty = 0;
+                            var isSelectAll = $("#CTNSelectAll").prop('checked');
                             $("#CTNSearch").val('').change();
+
+                            if (isSelectAll) {
+
+                                $('.CartonSelect').each(function () {
+                                    $(this).val(true);
+                                });
+                            }
+
                             $('[id^=Carton_Select_]').each(function () {
 
                                 if ($(this).prop('checked')) {
