--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -301,7 +301,7 @@
             <div style="width: 10%;">Inpection Result</div>
             <div style="width: 10%;">@Model.FinalInspection.InspectionResult</div>
             <div style="width: 10%;">QC</div>
-            <div style="width: 10%;">@</div>
+            <div style="width: 10%;"></div>
             <div style="width: 10%;">Prouduction</div>
             <div style="width: 10%;"></div>
             <div style="width: 10%;"></div>
