--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
@@ -449,39 +449,9 @@
             });
 
             $('#SendMail').unbind('click').on('click', function () {
-
-                $.ajax({
-                    url: "@Url.Action("WashingFastnessSendMail", "AccessoryOvenWash", new { Area = "BulkFGT" })",
-                    type: 'POST',
-                    contentType: "application/json; charset=utf-8",
-                    data: JSON.stringify({
-                        AIR_LaboratoryID: $("#AIR_LaboratoryID").val(),
-                        POID: $("#POID").val(),
-                        Seq1: $("#Seq1").val(),
-                        Seq2: $("#Seq2").val(),
-                    }),
-                    async: false,
-                    success: function (data) {
-                        if (data.Result) {
-                            var para = "?To=";
-                            para += "&CC=" + '@ViewBag.UserMail';
-                            para += "&Subject=" + "Accessory Washing Fastness Test – ReportNo:" + '@Model.ReportNo';
-                            para += "&Body=" + "Attachment is Accessory Oven Test– ReportNo:" + '@Model.ReportNo' + " detail data";
-                            para += "&file=" + data.FileName;
-                            @*para += "&IsShowAIComment=true";
-                            para += "&Type=Accessory Oven & Wash Test";s
-                            para += "&OrderID=" + '@Model.POID';*@
-                            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                        }
-                        else {
-                            msg.WithError(data.ErrorMessage);
-                        }
-                    },
-                    error: function (xhr, ajaxOptions, thrownError) {
-                        console.log(xhr.responseText);
-                    }
-                });
-        });
+                var para = '';
+                window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
+            });
         }
 
     function ToReport(IsToPDF) {
@@ -546,7 +516,7 @@
             };
 
             $.ajax({
-                url: "@Url.Action("WashingFastnessFailMail")",
+                url: "@Url.Action("SendWashingFastnessMail")",
                 type: 'POST',
                 dataType: "json",
                 data: { Req: data},
@@ -568,6 +538,43 @@
         }
     }
 
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+            var data = {
+                AIR_LaboratoryID: $("#AIR_LaboratoryID").val(),
+                POID: $("#POID").val(),
+                Seq1: $("#Seq1").val(),
+                Seq2: $("#Seq2").val(),
+                ToAddress: to,
+                CcAddress: cc,
+                ReportNo: '@Model.ReportNo',
+            };
+
+            $.ajax({
+                url: "@Url.Action("SendWashingFastnessMail")",
+                type: 'POST',
+                dataType: "json",
+                data: { Req: data},
+                async: false,
+                success: function (data) {
+                    if (data.result) {
+                        msg.WithSuccess("Success");
+                    }
+                    else {
+                        msg.WithWarning(data.resultMsg);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    msg.WithWarningCheck(xhr.responseText, function () {
+                        location.reload();
+                    });
+                }
+            });
+        }
+    }
 
     function DetailButtonBind() {
         $('.inputInspectorSelectItem').unbind('blur').on('blur', function () {
