--- a/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
@@ -816,7 +816,9 @@
                 return false;
             }
 
-            $.ajax({
+                var para = '';
+                window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
+            @*$.ajax({
                 url: "@Url.Action("SendMailToMR")",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
@@ -840,7 +842,7 @@
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(xhr.responseText);
                 }
-            });
+            });*@
         });
 
         if ($("#MainDetailData_Status").val() == "New") {
@@ -928,7 +930,7 @@
             data: JSON.stringify({ ReportNo: '@Model.MainDetailData.ReportNo', TO: to, CC: cc }),
             async: false,
             success: function (data) {
-                if (data.AgingHydrolysisResult) {
+                if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
                         location.reload();
                     });
@@ -946,6 +948,40 @@
                 });
             }
         });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("FailMail", "AgingHydrolysisTest", new { Area = "BulkFGT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ReportNo: '@Model.MainDetailData.ReportNo', TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        location.reload();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
     }
 
     function TimeCheck(value) {
