--- a/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
@@ -531,7 +531,9 @@
     $(function () {
         msg = new MessagerAlert();
         EditMode = false;
+
         @Html.Raw(Model.ErrorMessage)
+
         IsEditModeChange();
 
         if (!$("body").hasClass("sidebar-collapse")) {
@@ -1089,29 +1091,10 @@
 
 
         $('#SendMail').on('click', function () {
-            $.ajax({
-                url: "@Url.Action("SendMail", new { Area = "BulkFGT" })",
-                type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ ReportNo: $('#ReportNo').val() }),
-                async: false,
-                success: function (data) {
-                    if (data.Result) {
-                        var para = "?To=" + $('#Main_MRHandleEmail').val();
-                        para += "&CC=";
-                        para += "&Subject=" + "Daily Bulk Moisture Test – ReportNo:" + $('#ReportNo').val();
-                        para += "&Body=" + "Attachment Is Daily Bulk Moisture Test - ReportNo:" + $('#ReportNo').val() + " detail data";
-                        para += "&file=" + data.FileName;
-                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                    }
-                    else {
-                        msg.WithError(data.ErrorMessage);
-                    }
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    console.log(xhr.responseText);
-                }
-            });
+
+            var para = '';
+            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
+
         });
     }
 
@@ -1438,7 +1421,7 @@
         });
 
         $.ajax({
-            url: "@Url.Action("FailMail", "MockupOvenTest", new { Area = "BulkFGT" })",
+            url: "@Url.Action("SendMail")",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify({ ReportNo: $('#ReportNo').val(), TO: to, CC: cc }),
@@ -1458,6 +1441,39 @@
                 });
             }
         });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("SendMail")",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ReportNo: '@Model.Main.ReportNo', TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
     }
 
     function ToReport(IsToPDF) {
