ISP20240114 - Fabric Crocking & Shrinkage Test的Roll 、 Dyelot資料來源修改

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -814,16 +814,17 @@
             var targetID = $(this).closest('tr').attr('idx');
             var checkValue = $("#Heat_Detail_" + targetID + "__Roll").val();
 
+            var receivingID = '@Model.Heat_Main.ReceivingID';
             if (checkValue == "") {
                 $("#Heat_Detail_" + targetID + "__Dyelot").val('');
                 return;
             }
 
             $.ajax({
-                url: "@Url.Action("FtyInventoryList", "PublicWindow",new { Area=""})",
+                url: "@Url.Action("AllReceivingDetailList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ POID: poid, Seq1: seq1, Seq2: seq2, Roll: checkValue, ReturnType: "JSON" }),
+                data: JSON.stringify({ POID: poid, Seq1: seq1, Seq2: seq2, Roll: checkValue, ReceivingID: receivingID, ReturnType: "JSON" }),
                 async: true,
                 success: function (data) {
                     if (data.length == 0) {
@@ -844,8 +845,9 @@
 
         $('.btnRollSelectItem').unbind('click').on('click', function () {
             var targetID = $(this).closest('tr').attr('idx');
-            var para = "?POID=" + poid + "&Seq1=" + seq1 + "&Seq2=" + seq2 + "&TargetID=" + targetID;
-            window.open('@Url.Action("FtyInventoryList", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+            var receivingID = '@Model.Heat_Main.ReceivingID';
+            var para = "?POID=" + poid + "&Seq1=" + seq1 + "&Seq2=" + seq2 + "&TargetID=" + targetID + "&ReceivingID=" + receivingID;
+            window.open('@Url.Action("AllReceivingDetailList", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
         });
 
         $('.inputInspectorSelectItem').unbind('blur').on('blur', function () {
@@ -940,7 +942,7 @@
         });
     }
 
-    function GetFtyInventory(data, targetID) {
+    function GetAllReceivingDetail(data, targetID) {
         $("#Heat_Detail_" + targetID + "__Roll").val(data.Roll);
         $("#Heat_Detail_" + targetID + "__Dyelot").val(data.Dyelot);
     }
