--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
@@ -918,6 +918,7 @@
         $('.inputRollSelectItem').unbind('blur').on('blur', function () {
             var targetID = $(this).closest('tr').attr('idx');
             var checkValue = $("#Wash_Detail_" + targetID + "__Roll").val();
+            var receivingID = '@Model.Wash_Main.ReceivingID';
 
             if (checkValue == "") {
                 $("#Wash_Detail_" + targetID + "__Dyelot").val('');
@@ -925,10 +926,10 @@
             }
 
             $.ajax({
-                url: "@Url.Action("FtyInventoryList", "PublicWindow",new { Area=""})",
+                url: "@Url.Action("AllReceivingDetailList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ POID: poid, Seq1: seq1, Seq2: seq2, Roll: checkValue, ReturnType: "JSON" }),
+                data: JSON.stringify({ POID: poid, Seq1: seq1, Seq2: seq2, Roll: checkValue, ReceivingID: receivingID, ReturnType: "JSON" }),
                 async: true,
                 success: function (data) {
                     if (data.length == 0) {
@@ -949,8 +950,9 @@
 
         $('.btnRollSelectItem').unbind('click').on('click', function () {
             var targetID = $(this).closest('tr').attr('idx');
-            var para = "?POID=" + poid + "&Seq1=" + seq1 + "&Seq2=" + seq2 + "&TargetID=" + targetID;
-            window.open('@Url.Action("FtyInventoryList", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+            var receivingID = '@Model.Wash_Main.ReceivingID';
+            var para = "?POID=" + poid + "&Seq1=" + seq1 + "&Seq2=" + seq2 + "&TargetID=" + targetID + "&ReceivingID=" + receivingID;
+            window.open('@Url.Action("AllReceivingDetailList", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
         });
 
         $('.inputInspectorSelectItem').unbind('blur').on('blur', function () {
@@ -1091,7 +1093,7 @@
         $('#Wash_Detail_' + idx + '__SkewnessRate').val(rate > 100 ? 100 : rate);
     }
 
-    function GetFtyInventory(data, targetID) {
+    function GetAllReceivingDetail(data, targetID) {
         $("#Wash_Detail_" + targetID + "__Roll").val(data.Roll);
         $("#Wash_Detail_" + targetID + "__Dyelot").val(data.Dyelot);
     }
