--- a/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
@@ -1049,52 +1049,10 @@
             }
             var para = '';
             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
-
-            var mockupCrocking_Request = {
-                ReportNo: $('#ReportNo').val(),
-                BrandID: $('#Request_BrandID').val(),
-                SeasonID: $('#Request_SeasonID').val(),
-                StyleID: $('#Request_StyleID').val(),
-                Article: $('#Request_Article').val(),
-            };
-
         });
     }
 
 
-    function GetSendMailer(data) {
-        var to = data.To;
-        var cc = data.CC;
-
-        if (to != "") {
-
-        $.ajax({
-            url: "@Url.Action("SendMail", "MockupCrocking", new { Area = "BulkFGT" })",
-            type: 'POST',
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ReportNo: $('#ReportNo').val(), TO: to, CC: cc }),
-            async: false,
-            success: function (data) {
-                if (data.result) {
-                    msg.WithSuccesCheck("Success", function () {
-                        location.reload();
-                    });
-                }
-                else {
-                    msg.WithWarningCheck(data.resultMsg, function () {
-                        location.reload();
-                    });
-                }
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                // console.log(xhr.responseText);
-                msg.WithWarningCheck(xhr.responseText, function () {
-                    location.reload();
-                });
-            }
-        });
-        }
-    }
 
     function DetailButtonBind() {
         $('#btnDetailBrandSelectItem').on('click', function () {
@@ -1329,7 +1287,7 @@
             success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
-                        location.reload();
+                        $("#btnQuery").click();
                     });
                 }
                 else {
@@ -1345,5 +1303,39 @@
                 });
             }
         });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("SendMail", "MockupCrocking", new { Area = "BulkFGT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ReportNo: $('#ReportNo').val(), TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
     }
 </script>
