--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -1164,40 +1164,9 @@
 
                 return false;
             }
+            var para = '';
+            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
 
-            var MockupWash_Request = {
-                ReportNo: $('#ReportNo').val(),
-                BrandID: $('#Request_BrandID').val(),
-                SeasonID: $('#Request_SeasonID').val(),
-                StyleID: $('#Request_StyleID').val(),
-                Article: $('#Request_Article').val(),
-            };
-            $.ajax({
-                url: "@Url.Action("ToPDF", "MockupWash", new { Area = "BulkFGT" })",
-                type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ MockupWash_Request }),
-                async: false,
-                success: function (data) {
-                    if (data.Result) {
-                        var para = "?To=" + $('#MRMail').val();
-                        para += "&CC=" + '@ViewBag.UserMail';
-                        para += "&Subject=" + "Mockup Wash Test – ReportNo:" + $('#ReportNo').val() + " – Style: " + $('#StyleID').val();
-                        para += "&Body=" + "Attachment is Mockup Wash Test– ReportNo:" + $('#ReportNo').val() + " detail data";
-                        para += "&file=" + data.FileName;
-                        @*para += "&IsShowAIComment=true";
-                        para += "&Type=Mockup Wash Test";
-                        para += "&OrderID=" + '@Model.POID';*@
-                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                    }
-                    else {
-                        msg.WithError(data.ErrorMessage);
-                    }
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    console.log(xhr.responseText);
-                }
-            });
         });
     }
 
@@ -1492,17 +1461,21 @@
         });
 
         $.ajax({
-            url: "@Url.Action("FailMail", "MockupWash", new { Area = "BulkFGT" })",
+            url: "@Url.Action("SendMail")",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify({ ReportNo: $('#ReportNo').val(), TO: to, CC: cc }),
             async: false,
             success: function (data) {
                 if (data.result) {
-                    msg.WithSuccess("Success");
+                    msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
+                    });
                 }
                 else {
-                    msg.WithWarning(data.resultMsg);
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
                 }
             },
             error: function (xhr, ajaxOptions, thrownError) {
@@ -1512,6 +1485,40 @@
                 });
             }
         });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("SendMail")",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ReportNo: $('#ReportNo').val(), TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        $("#btnQuery").click();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
     }
 
     function PressureCheck(value) {
