--- a/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Detail.cshtml
@@ -1488,36 +1488,9 @@
         });
 
         $('#SendMail').unbind('click').on('click', function () {
+            var para = '';
+            window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
 
-            $.ajax({
-                url: "@Url.Action("SendMail", "PerspirationFastness", new { Area = "BulkFGT" })",
-                type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({
-                    ID: $('#Main_ID').val(),
-                    No: $('#Main_TestNo').val()
-                }),
-                async: false,
-                success: function (data) {
-                    if (data.Result) {
-                        var para = "?To=";
-                        para += "&CC=" + '@ViewBag.UserMail';
-                        para += "&Subject=" + "Perspiration Fastness Test – ReportNo:" + '@Model.Main.ReportNo';
-                        para += "&Body=" + "Attachment is Perspiration Fastness Test– ReportNo:" + '@Model.Main.ReportNo' + " detail data";
-                        para += "&file=" + data.FileName;
-                        @*para += "&IsShowAIComment=true";
-                        para += "&Type=Perspiration Fastness Test";
-                        para += "&OrderID=" + '@Model.Main.POID';*@
-                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                    }
-                    else {
-                        msg.WithError(data.ErrorMessage);
-                    }
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    console.log(xhr.responseText);
-                }
-            });
     });
     }
 
@@ -1556,7 +1529,7 @@
         });
 
         $.ajax({
-            url: "@Url.Action("FailMail", "PerspirationFastness", new { Area = "BulkFGT" })",
+            url: "@Url.Action("SendMail")",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify({ ID: $('#Main_POID').val(), No: $('#Main_TestNo').val(), TO: to, CC: cc }),
@@ -1580,6 +1553,40 @@
                 });
             }
         });
+    }
+
+    function GetSendMailer(data) {
+        var to = data.To;
+        var cc = data.CC;
+
+        if (to != "") {
+
+        $.ajax({
+            url: "@Url.Action("SendMail")",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ ID: $('#Main_POID').val(), No: $('#Main_TestNo').val(), TO: to, CC: cc }),
+            async: false,
+            success: function (data) {
+                if (data.result) {
+                    msg.WithSuccesCheck("Success", function () {
+                        location.reload();
+                    });
+                }
+                else {
+                    msg.WithWarningCheck(data.resultMsg, function () {
+                        location.reload();
+                    });
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                // console.log(xhr.responseText);
+                msg.WithWarningCheck(xhr.responseText, function () {
+                    location.reload();
+                });
+            }
+        });
+        }
     }
 
     function AddDetailRow() {
